<resources>
    <string name="app_name">BMI</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="normal_bmi_result">Normal BMI range: 18.5kg/m2 - 25kg/m2 Ponderal Index: 10.64kg/m3</string>
    <string name="enter_personal_detail">Enter Personal Detail</string>
    <string name="name">Name</string>
    <string name="calculate_your_body_mass_index">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="enter_name">Please Enter your name</string>
    <string name="normal_result_format">Hello %s you are normal</string>
    <string name="not_normal_result_format">Hello %s you are not normal</string>

    <string-array name="genders">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
</resources>